# candbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: candboxConfig.cmake.in
include/candbox/: candbox.h  sandbox_rule.h  string_util.h  syscall_mapper.h
src/: candbox.cpp  syscall_mapper.cpp  syscall_rule.cpp
